samples/_failures_safe/1761153166_87eaed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dec9ce8d.c: In function ‘main’:
./samples/SAFE/__tmp_dec9ce8d.c:165:13: error: expected expression at end of input
  165 |             "NUMBER", "IDENTIFIER", "OPERATOR", "STRING",
      |             ^~~~~~~~
./samples/SAFE/__tmp_dec9ce8d.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dec9ce8d.c:165:13: error: expected declaration or statement at end of input
